; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-rv3029c2.c_rv3029_write_regs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-rv3029c2.c_rv3029_write_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rv3029_data = type { i32 }

@RV3029_USR1_RAM_PAGE = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i64, i64*, i32)* @rv3029_write_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rv3029_write_regs(%struct.device* %0, i64 %1, i64* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.device*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.rv3029_data*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64* %2, i64** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load %struct.device*, %struct.device** %6, align 8
  %12 = call %struct.rv3029_data* @dev_get_drvdata(%struct.device* %11)
  store %struct.rv3029_data* %12, %struct.rv3029_data** %10, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* @RV3029_USR1_RAM_PAGE, align 8
  %15 = add nsw i64 %14, 7
  %16 = icmp sgt i64 %13, %15
  br i1 %16, label %25, label %17

17:                                               ; preds = %4
  %18 = load i64, i64* %7, align 8
  %19 = load i32, i32* %9, align 4
  %20 = zext i32 %19 to i64
  %21 = add nsw i64 %18, %20
  %22 = load i64, i64* @RV3029_USR1_RAM_PAGE, align 8
  %23 = add nsw i64 %22, 8
  %24 = icmp sgt i64 %21, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %17, %4
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %5, align 4
  br label %36

28:                                               ; preds = %17
  %29 = load %struct.rv3029_data*, %struct.rv3029_data** %10, align 8
  %30 = getelementptr inbounds %struct.rv3029_data, %struct.rv3029_data* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i64, i64* %7, align 8
  %33 = load i64*, i64** %8, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @regmap_bulk_write(i32 %31, i64 %32, i64* %33, i32 %34)
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %28, %25
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local %struct.rv3029_data* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @regmap_bulk_write(i32, i64, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
